--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,66 @@
-# Logs
-logs
-*.log
+# Dependencies
+node_modules/
+package-lock.json
+yarn.lock
+
+# Build output
+dist/
+build/
+
+# Local environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
+*.log
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
+.idea/
+.vscode/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
+
+# Miscellaneous
+.DS_Store
+*.pem
+*.p12
+*.key
+*.crt
+*.pub
+
+# Optional npm cache directory
+.npm
+
+# Debug coverage reports
+coverage/
+
+# Temporary files and folders
+temp/
+*.tmp
+
+# Parcel-bundler cache
+.cache/
+
+# Jest snapshots
+__snapshots__/
+
+# MacOS
+.DS_Store
+
+# ESLint cache
+.eslintcache
+
+# Webpack cache
+.cache/
+*.cache/
+
+# React Native
+.expo/
+web-build/
